# mempalace

./: .gitignore  .gitmodules  .taplo.toml  AGENTS.md  Cargo.toml  README.md  STYLEGUIDE.md  STYLE_GUIDE.md  USAGE.md  build.rs  clippy.toml  codecov.yml  hk.pkl  mise.toml
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude-plugin/commands/: help.md  init.md
.claude-plugin/skills/mempalace/: SKILL.md
.claude/commands/: resync-py.md
.codex-plugin/: hooks.json  plugin.json
.codex-plugin/skills/mempalace/: SKILL.md
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: audit.yml  build.yml  cargo.yml  clean-pr-cache.yml  lint.yml  test.yml
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
integrations/openclaw/: SKILL.md
src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  schema.rs  test_helpers.rs
src/cli/: closet_llm.rs  compress.rs  dedup.rs  diary_ingest.rs  export.rs  hook.rs  init.rs  instructions.rs  mod.rs  onboarding.rs  repair.rs  search.rs  split.rs  status.rs  sweep.rs  sync.rs  wakeup.rs
src/dialect/: emotions.rs  mod.rs  topics.rs
src/extract/: markers.rs  mod.rs
src/i18n/: de.json  en.json  es.json  fr.json  hi.json  it.json  mod.rs  zh-CN.json  zh-TW.json
src/instructions/: mine.md
src/kg/: mod.rs  query.rs
src/llm/: client.rs  mod.rs  refine.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/normalize/: chatgpt.rs  claude_ai.rs  claude_code.rs  codex.rs  gemini_cli.rs  mod.rs  slack.rs
src/palace/: chunker.rs  closet_llm.rs  closets.rs  convo_miner.rs  corpus_origin.rs  dedup.rs  diary_ingest.rs  drawer.rs  entities.rs  entity_confirm.rs  entity_detect.rs  entity_registry.rs  exporter.rs  fact_checker.rs  graph.rs  known_entities.rs  layers.rs  miner.rs  mod.rs  project_scanner.rs  query_sanitizer.rs  repair.rs  room_detect.rs  search.rs  session_scanner.rs  stack.rs  stats.rs  sweeper.rs
src/sources/: adapter.rs  context.rs  mod.rs  registry.rs  transforms.rs
tests/: app_dispatch.rs  compress_pipeline.rs  concurrent_access.rs  fts5_test.rs  kg_workflow.rs  mcp_request_cycle.rs  mining_pipeline.rs  normalize_pipeline.rs  schema_test.rs
