[package]
name = "mempalace"
version = "0.1.0"
edition = "2024"
description = "Local-first memory palace for AI assistants — single static binary backed by embedded SQLite"
license = "MIT"
repository = "https://github.com/bunkerlab-net/mempalace"
keywords = ["mcp", "memory", "ai", "sqlite", "llm"]
categories = ["command-line-utilities", "database"]
rust-version = "1.88"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
turso = "0.5.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
