[package]
name = "mempalace"
version = "0.1.0"
edition = "2024"
description = "Local-first memory palace for AI assistants — single static binary backed by embedded SQLite"
license = "MIT"
repository = "https://github.com/bunkerlab-net/mempalace"
keywords = ["mcp", "memory", "ai", "sqlite", "llm"]
categories = ["command-line-utilities", "database"]
rust-version = "1.88"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4", default-features = false, features = [
  "derive",
  "error-context",
  "help",
  "std",
  "usage",
] }
ignore = { version = "0.4", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = { version = "1", default-features = false, features = [
  "derive",
  "std",
] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9", default-features = false }
sha2 = { version = "0.11", default-features = false }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
] }
turso = { version = "0.5.3", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4"] }

[dev-dependencies]
temp-env = { version = "0.3", features = ["async_closure"] }
tempfile = "3"
